# Multi-Cam6DPoseTracker

./: .gitignore  CMakeLists.txt  CMakePresets.json  MIGRATION_ELECTRON_VUE_CPP.md  README.md  README_WINDOWS_QT515_VS2019.md
assets/: tag_corners_world_template.txt
backend/: CMakeLists.txt
backend/src/: server_main.cpp
frontend/: index.html  package.json
frontend/electron/: main.cjs
frontend/src/: main.js
scripts/: build_vs2019_vcpkg.bat  deploy_qt.bat
src/: CaptureWorker.h  Core.cpp  Core.h  MainWindow.cpp  MainWindow.h  QCustomPlot.cpp  QCustomPlot.h  SolveWorker.h  Types.h  main.cpp
